--- a/ComparingSequences.qmd
+++ b/ComparingSequences.qmd
@@ -21,13 +21,16 @@ Formatted, should contain everything needed for current analysis. Have not check
 ```{r setup}
 #loading packages
 library(pacman)
-p_load(tidyverse, terra, tidyterra, whitebox, scales, wesanderson, caret, plotly,ggnewscale, sf, elevatr, patchwork, ggspatial, zoo, igraph, TSP, ggnetwork, intergraph, ggpubr, knitr, purrr, spatialEco, hydroEvents,
+p_load(tidyverse, terra, tidyterra, whitebox, scales, wesanderson, caret, plotly,ggnewscale, sf, elevatr, patchwork, ggspatial, zoo, igraph, TSP, ggnetwork, #intergraph, ggpubr, knitr, #purrr, spatialEco, 
+       hydroEvents,
        maptools)
 #whitebox::install_whitebox()
 
 
-p_load(conflicted)
-    conflict_prefer("select", "dplyr")
+#p_load(conflicted)
+#    conflict_prefer("select", "dplyr")
+#        conflict_prefer("filter", "dplyr")
+
 
 
 #reading in final format data for summer 23
@@ -666,6 +669,29 @@ comparison %>%
 
 ```
 ### Stage for FB and ZZ
+Process salt dilutions
+```{r process-dilutions}
+source("calcQ.R")
+q_combined <- rbind(
+calcQ("./salt_dilutions/FB/FB_8_1") %>% mutate("shed" = "FB"),
+#calcQ("./salt_dilutions/FB/FB_6_23_fail") %>% mutate("shed" = "FB"),
+calcQ("./salt_dilutions/ZZ/ZZ_8_1")%>% mutate("shed" = "ZZ"),
+calcQ("./salt_dilutions/ZZ/ZZ_7_1")%>% mutate("shed" = "ZZ"),
+#calcQ("./salt_dilutions/ZZ/ZZ_6_23") %>% mutate("shed" = "ZZ"),#different timestep, after fixing gave negative number
+calcQ("./salt_dilutions/ZZ/ZZ_6_21")%>% mutate("shed" = "ZZ"),
+
+#no k
+calcQ_noK("./salt_dilutions/FB/FB_7_1", mean(c(0.0001120716, 2.621858e-06))) %>% mutate("shed" = "FB"),
+calcQ_noK("./salt_dilutions/FB/FB_6_23_Success", mean(c(0.0001120716, 2.621858e-06))) %>% mutate("shed" = "FB"),
+
+#missing FB 8_5, no k and no upstream logger
+# ZZ_8_5, no k and no upstream logger
+calcQ_noK_oneL("./salt_dilutions/FB/FB_8_5", mean(c(0.0001120716, 2.621858e-06))) %>% mutate("shed" = "FB"),
+calcQ_noK_oneL("./salt_dilutions/ZZ/ZZ_8_5", mean(c(9.453437e-05, 4.017994e-06,
+                                                    3.962093e-05, 9.693616e-05)))%>% mutate("shed" = "ZZ")
+)
+```
+
 ```{r FB-2023}
 FB_air <- read_csv("./PressureTransducers_11_14_23/FB_air.csv", skip = 1) %>% 
   select(2:3) %>% 
@@ -711,7 +737,7 @@ FB_water %>%
           DATETIME <= ymd_hms("2023-09-22 00:00:00"))) %>% 
   mutate(minutes = minute(DATETIME)) %>% 
   filter(minutes %in% c(0, 30)) %>% 
-  mutate(roll_mean = rollapply(stage_cm ,24,mean,align='center',fill=NA)) %>%
+  mutate(roll_mean = rollapply(stage_cm ,48,mean,align='center',fill=NA)) %>%
   ggplot()+
   geom_line(aes(x = DATETIME, y = stage_cm))+
     geom_line(aes(x = DATETIME, y = roll_mean), color = "grey")+
@@ -720,7 +746,7 @@ FB_water %>%
        x = "",
        y = "Stage (in)")
 
-processed_fb_stage <- FB_water %>% 
+processed_fb_stage_23 <- FB_water %>% 
   left_join(FB_air, by = "DATETIME") %>% 
   mutate(diff_psi = pressure_psi_water - pressure_psi_air) %>% 
   mutate(stage_cm = ((diff_psi*6894.76) / (997 * 9.8)) * 100 * 0.393701) %>% 
@@ -730,9 +756,13 @@ processed_fb_stage <- FB_water %>%
           DATETIME <= ymd_hms("2023-09-22 00:00:00"))) %>% 
   mutate(minutes = minute(DATETIME)) %>% 
   filter(minutes %in% c(0, 30)) %>% 
-  mutate(roll_mean = rollapply(stage_cm ,24,mean,align='center',fill=NA)) %>% 
-  drop_na()
+  mutate(roll_mean = rollapply(stage_cm ,48,mean,align='center',fill=NA)) %>% 
+  drop_na() %>% mutate(Q = roll_mean * fb_stage_Q_model$coefficients[2] +  fb_stage_Q_model$coefficients[1])
 
+processed_fb_stage %>% 
+  ggplot(aes(x = DATETIME, y = Q))+
+  geom_line()+
+  theme_classic()
 
 #output processed salt dilutions
 # q_combined %>% filter(shed == "FB") %>% 
@@ -819,13 +849,202 @@ discharge_df %>%
 ```{r FB-2024}
 #Read in measurements from 2024
 
+fb_air_25 <-
+  rbind(read_csv("./pducers_summer25/fb_air.csv", skip = 1) %>% 
+  select(2:3) %>% 
+  rename(DATETIME = 1,
+         pressure_psi_air = 2) %>% 
+  mutate(DATETIME = mdy_hms(DATETIME)))
+
 FB_air <- read_csv("./PressureTransducers_summer24/FB_air.csv", skip = 1) %>% 
+  select(2:3) %>% 
+  rename(DATETIME = 1,
+         pressure_psi_air = 2) %>% 
+  mutate(DATETIME = mdy_hms(DATETIME)) %>% 
+  rbind(fb_air_25)
+
+fb_water_25 <- 
+  read_csv("./pducers_summer25/fb_water.csv", skip = 1) %>% 
+  select(2:3) %>% 
+  rename(DATETIME = 1,
+         pressure_psi_water = 2) %>% 
+  mutate(DATETIME = mdy_hms(DATETIME))
+
+
+FB_water <- read_csv("./PressureTransducers_summer24/FB_water.csv", skip = 1) %>% 
+  select(2:3) %>% 
+  rename(DATETIME = 1,
+         pressure_psi_water = 2) %>% 
+  mutate(DATETIME = mdy_hms(DATETIME)) %>% 
+  rbind(fb_water_25)
+
+processed_fb_stage <- FB_water %>% 
+  left_join(FB_air, by = "DATETIME") %>% 
+  mutate(diff_psi = pressure_psi_water - pressure_psi_air) %>% 
+  mutate(stage_cm = ((diff_psi*6894.76) / (997 * 9.8)) * 100 * 0.393701) %>% 
+    #filter(DATETIME <= ymd_hms("2024-08-06 10:30:00 UTC")) %>% 
+  mutate(minutes = minute(DATETIME)) %>% 
+  filter(minutes %in% c(0, 30)) %>% 
+  mutate(roll_mean = rollapply(stage_cm ,24,mean,align='center',fill=NA)) %>% 
+  drop_na()
+
+#View(processed_fb_stage)
+
+processed_fb_stage %>% 
+  filter(DATETIME == ("2024-08-01 11:00:00"))
+
+# processed salt dilutions
+dilutions <- q_combined %>% filter(shed == "FB") %>% 
+  mutate(datetime = round_date(datetime, unit = minutes(30))) %>% 
+  rename(DATETIME = datetime) %>% 
+  left_join(processed_fb_stage, by = "DATETIME")
+dilutions
+
+FB_water %>% 
+  left_join(FB_air, by = "DATETIME") %>% 
+  mutate(diff_psi = pressure_psi_water - pressure_psi_air) %>% 
+  mutate(stage_cm = ((diff_psi*6894.76) / (997 * 9.8)) * 100 * 0.393701,
+         #apply a rolling mean to get rid of temperature artifacts
+         roll_mean = rollapply(stage_cm ,48,mean,align='center',fill=NA)) %>% 
+  ggplot()+
+  geom_line(aes(x = DATETIME, y = stage_cm))+
+    geom_line(aes(x = DATETIME, y = roll_mean), color = "grey")+
+  
+  theme_classic()+
+  labs(title = "Falls Brook Stage",
+       x = "",
+       y = "Stage (in)")+
+  geom_point(data = dilutions,
+             aes(x = DATETIME, y = stage_cm),
+             color = "blue")
+dilutions %>% 
+  ggplot(aes(x = roll_mean, y = discharge))+
+  geom_smooth(method = 'lm', se = FALSE, color = "grey")+
+  geom_point()+
+  labs(x = "Stage (cm)", y = "Discharge (L/s)",
+       title = "FB Stage/Q")+
+  #geom_text(aes(label = DATETIME), nudge_x = 1)+
+  theme_classic()
+
+fb_stage_Q_model <- lm(dilutions$discharge ~ dilutions$roll_mean)
+
+
+processed_fb_stage_24 <- FB_water %>% 
+  left_join(FB_air, by = "DATETIME") %>% 
+  mutate(diff_psi = pressure_psi_water - pressure_psi_air) %>% 
+  mutate(stage_cm = ((diff_psi*6894.76) / (997 * 9.8)) * 100 * 0.393701) %>% 
+    filter(DATETIME <= ymd_hms("2024-08-06 10:30:00 UTC")) %>% 
+  mutate(minutes = minute(DATETIME)) %>% 
+  filter(minutes %in% c(0, 30)) %>% 
+  mutate(roll_mean = rollapply(stage_cm ,48,mean,align='center',fill=NA)) %>% 
+  drop_na() %>% 
+  mutate(Q = roll_mean * fb_stage_Q_model$coefficients[2] +  fb_stage_Q_model$coefficients[1])
+
+processed_fb_stage %>% 
+  ggplot(aes(x = DATETIME, y = Q))+
+  geom_line()+
+  theme_classic()
+
+all_fb_Q <- rbind(processed_fb_stage_23, processed_fb_stage_24)
+
+all_fb_Q %>% 
+  ggplot(aes(x = DATETIME, y = Q))+
+  geom_line(na.rm = FALSE)+
+  theme_classic()
+#output processed salt dilutions
+q_combined %>% filter(shed == "FB") %>% 
+  mutate(datetime = round_date(datetime, unit = minutes(30))) %>% 
+  rename(DATETIME = datetime) %>% 
+  left_join(processed_fb_stage, by = "DATETIME")
+
+
+#identifying events
+bf = baseflowB(processed_fb_stage$roll_mean, alpha = 0.99)
+
+
+#subtract baseflow from discharge
+#PoT_res = eventPOT(q_23_plotting$Q_mm_day - bf$bf, threshold = 1, min.diff = 1)
+
+PoT_res = eventPOT(processed_fb_stage$roll_mean - bf$bf, threshold = 0.2, min.diff = 20)
+#plot the events
+plotEvents(data = processed_fb_stage$roll_mean, events = PoT_res, xlab = "Index", ylab = "Flow (ML/day)", colpnt = "#E41A1C", colline = "#377EB8", main = "eventPOT")
+
+
+
+limbs(data = processed_fb_stage$roll_mean, 
+               dates =NULL, 
+               events = PoT_res, 
+               to.plot = TRUE)#now, extract just the start column, then get each window and run through scoring algorithm
+
+
+ranges <- data.frame("starts" = PoT_res$srt) %>% 
+  mutate("stops" = lead(starts)) %>% 
+  mutate(event_ID = row_number(starts))
+
+
+# Example: discharge dataframe with datetime and discharge
+discharge_df <- processed_fb_stage
+
+# Copy of your event table
+events <- limbs(data = processed_fb_stage$roll_mean, 
+               dates =NULL, 
+               events = PoT_res, 
+               to.plot = FALSE)#now, extract just the start column, then get each window and run through scoring algorithm
+
+# Initialize the event_type column
+discharge_df$event_type <- NA_character_
+discharge_df$event_id <- NA_integer_
+
+# Assign "rising" and "falling" from event definitions
+for (i in seq_len(nrow(events))) {
+  ev <- events[i, ]
+  discharge_df$event_id[ev$ris.srt:ev$fal.end] <- i  # Event ID for rising+falling
+  
+  # Rising limb
+  if (!is.na(ev$ris.srt) && !is.na(ev$ris.end) && ev$ris.srt <= ev$ris.end) {
+    discharge_df$event_type[ev$ris.srt:ev$ris.end] <- "rising"
+  }
+  
+  # Falling limb
+  if (!is.na(ev$fal.srt) && !is.na(ev$fal.end) && ev$fal.srt <= ev$fal.end) {
+    discharge_df$event_type[ev$fal.srt:ev$fal.end] <- "falling"
+  }
+  
+  # Baseflow between events
+  if (i < nrow(events)) {
+    this_fal_end <- ev$fal.end
+    next_ris_srt <- events$ris.srt[i + 1]
+    if (this_fal_end + 1 <= next_ris_srt - 1) {
+      baseflow_idx <- (this_fal_end + 1):(next_ris_srt - 1)
+      discharge_df$event_type[baseflow_idx] <- "baseflow"
+      discharge_df$event_id[baseflow_idx] <- NA  # baseflow is not part of any event
+    }
+  }
+}
+
+# Optional: label all remaining NA values as "baseflow" (e.g., before first or after last event)
+discharge_df$event_type[is.na(discharge_df$event_type)] <- "baseflow"
+
+stage_df_24 <- discharge_df
+
+discharge_df %>% 
+  ggplot(aes(x = DATETIME, y = roll_mean, color = event_type))+
+  geom_point()
+
+fb_limbs <- rbind(stage_df_24, stage_df_23) %>% 
+  rename("datetime" = DATETIME)
+#BIG PROBLEM
+```
+```{r FB-2025}
+#Read in measurements from 2024
+
+FB_air <- read_csv("./pducers_summer25/fb_air.csv", skip = 1) %>% 
   select(2:3) %>% 
   rename(DATETIME = 1,
          pressure_psi_air = 2) %>% 
   mutate(DATETIME = mdy_hms(DATETIME))
 
-FB_water <- read_csv("./PressureTransducers_summer24/FB_water.csv", skip = 1) %>% 
+FB_water <- read_csv("./pducers_summer25/fb_water.csv", skip = 1) %>% 
   select(2:3) %>% 
   rename(DATETIME = 1,
          pressure_psi_water = 2) %>% 
@@ -955,6 +1174,7 @@ fb_limbs <- rbind(stage_df_24, stage_df_23) %>%
   rename("datetime" = DATETIME)
 #BIG PROBLEM
 ```
+
 
 ```{r ZZ-2023}
 #chunk that reads in stage, converts to proper units
@@ -1191,6 +1411,102 @@ zz_limbs <- rbind(stage_24, stage_23)%>%
 
 ```
 
+```{r}
+#Read in measurements from 2024
+
+zz_air_25 <-
+  rbind(read_csv("./pducers_summer25/zz_air.csv", skip = 1) %>% 
+  select(2:3) %>% 
+  rename(DATETIME = 1,
+         pressure_psi_air = 2) %>% 
+  mutate(DATETIME = mdy_hms(DATETIME)))
+
+ZZ_air <- read_csv("./PressureTransducers_summer24/ZZ_air.csv", skip = 1) %>% 
+  select(2:3) %>% 
+  rename(DATETIME = 1,
+         pressure_psi_air = 2) %>% 
+  mutate(DATETIME = mdy_hms(DATETIME)) %>% 
+  rbind(fb_air_25)
+
+zz_water_25 <- 
+  read_csv("./pducers_summer25/zz_water.csv", skip = 1) %>% 
+  select(2:3) %>% 
+  rename(DATETIME = 1,
+         pressure_psi_water = 2) %>% 
+  mutate(DATETIME = mdy_hms(DATETIME))
+
+
+ZZ_water <- read_csv("./PressureTransducers_summer24/ZZ_water.csv", skip = 1) %>% 
+  select(2:3) %>% 
+  rename(DATETIME = 1,
+         pressure_psi_water = 2) %>% 
+  mutate(DATETIME = mdy_hms(DATETIME)) %>% 
+  rbind(zz_water_25)
+
+processed_zz_stage <- ZZ_water %>% 
+  left_join(ZZ_air, by = "DATETIME") %>% 
+  mutate(diff_psi = pressure_psi_water - pressure_psi_air) %>% 
+  mutate(stage_cm = ((diff_psi*6894.76) / (997 * 9.8)) * 100 * 0.393701) %>% 
+    #filter(DATETIME <= ymd_hms("2024-08-06 10:30:00 UTC")) %>% 
+  mutate(minutes = minute(DATETIME)) %>% 
+  filter(minutes %in% c(0, 30)) %>% 
+  mutate(roll_mean = rollapply(stage_cm ,24,mean,align='center',fill=NA)) %>% 
+  drop_na()
+
+View(processed_zz_stage)
+
+processed_zz_stage %>% 
+  filter(DATETIME == ("2024-08-01 11:00:00"))
+
+# processed salt dilutions
+dilutions <- q_combined %>% filter(shed == "ZZ") %>% 
+  mutate(datetime = round_date(datetime, unit = minutes(30))) %>% 
+  rename(DATETIME = datetime) %>% 
+  left_join(processed_zz_stage, by = "DATETIME")
+dilutions
+
+ZZ_water %>% 
+  left_join(ZZ_air, by = "DATETIME") %>% 
+  mutate(diff_psi = pressure_psi_water - pressure_psi_air) %>% 
+  mutate(stage_cm = ((diff_psi*6894.76) / (997 * 9.8)) * 100 * 0.393701,
+         #apply a rolling mean to get rid of temperature artifacts
+         roll_mean = rollapply(stage_cm ,48,mean,align='center',fill=NA)) %>% 
+  ggplot()+
+  geom_line(aes(x = DATETIME, y = stage_cm))+
+    geom_line(aes(x = DATETIME, y = roll_mean), color = "grey")+
+  
+  theme_classic()+
+  labs(title = "ZZ Stage",
+       x = "",
+       y = "Stage (in)")+
+  geom_point(data = dilutions,
+             aes(x = DATETIME, y = stage_cm),
+             color = "blue")
+
+dilutions %>% 
+  ggplot(aes(x = roll_mean, y = discharge))+
+  geom_point()+
+  labs(x = "Stage (cm)", y = "Discharge (L/s)",
+       title = "ZZ Stage/Q")+
+  theme_classic()+
+  geom_smooth(method = "lm")
+
+exponential.model <- lm(log(dilutions$discharge)~ dilutions$roll_mean)
+summary(exponential.model)
+
+linear <- lm((dilutions$discharge)~ dilutions$roll_mean)
+summary(linear)
+
+
+#now apply model to convert to discharge across time
+processed_zz_stage %>% 
+  mutate(prediction = (roll_mean^exponential.model$coefficients[2])-exponential.model$coefficients[1]) %>% 
+  ggplot(aes(x = DATETIME, y = prediction))+
+  geom_line()
+  
+```
+
+
 ### Number of transitions in each component of hydrograph
 ```{r W3}
 #make companion plot that shows the number of transitions during each part of hydrograph
@@ -1277,44 +1593,7 @@ W3_all_combos <- calc_props(W3_combos_routes, "W3")
 #general_graph(W3_IDs, "W3", methods = c("cheapest_insertion"), two_opt = TRUE)
 ```
 
-What if I tried to show this in some way- map where each sensor was the average prop value when it is a parent?
-```{r}
-parents <- W3_all_combos %>% 
-  filter(timescale == "30mins") %>% 
-  rename(parent = down, child = up) %>% 
-  group_by(parent) %>% 
-  summarise(mean_parent = mean(prop)) %>% 
-  rename(ID = parent)
-  
-childs <- W3_all_combos %>% 
-  filter(timescale == "30mins") %>% 
-  rename(parent = down, child = up) %>% 
-  group_by(child) %>% 
-  summarise(mean_child = mean(prop)) %>% 
-  rename(ID = child)
 
-left_join(parents, childs, by = "ID") %>% 
-  ggplot(aes(x = mean_parent, y = mean_child))+
-  geom_point()
-
-parents <- FB_all_combos %>% 
-  filter(timescale == "30mins") %>% 
-  rename(parent = down, child = up) %>% 
-  group_by(parent) %>% 
-  summarise(mean_parent = mean(prop)) %>% 
-  rename(ID = parent)
-  
-childs <- FB_all_combos %>% 
-  filter(timescale == "30mins") %>% 
-  rename(parent = down, child = up) %>% 
-  group_by(child) %>% 
-  summarise(mean_child = mean(prop)) %>% 
-  rename(ID = child)
-
-left_join(parents, childs, by = "ID") %>% 
-  ggplot(aes(x = mean_parent, y = mean_child))+
-  geom_point()
-```
 
 ```{r FB}
 #set routes for all 3 watersheds
@@ -1359,6 +1638,45 @@ all_combos_routes <- data.frame("up" = rep(combos, zzz),
                                 "down" = all_list)
 #run calc_support for all sheds and timesteps for relative position
 ZZ_all_combos <- calc_props(all_combos_routes, "ZZ")
+```
+
+What if I tried to show this in some way- map where each sensor was the average prop value when it is a parent?
+```{r}
+parents <- W3_all_combos %>% 
+  filter(timescale == "30mins") %>% 
+  rename(parent = down, child = up) %>% 
+  group_by(parent) %>% 
+  summarise(mean_parent = mean(prop)) %>% 
+  rename(ID = parent)
+  
+childs <- W3_all_combos %>% 
+  filter(timescale == "30mins") %>% 
+  rename(parent = down, child = up) %>% 
+  group_by(child) %>% 
+  summarise(mean_child = mean(prop)) %>% 
+  rename(ID = child)
+
+left_join(parents, childs, by = "ID") %>% 
+  ggplot(aes(x = mean_parent, y = mean_child))+
+  geom_point()
+
+parents <- FB_all_combos %>% 
+  filter(timescale == "30mins") %>% 
+  rename(parent = down, child = up) %>% 
+  group_by(parent) %>% 
+  summarise(mean_parent = mean(prop)) %>% 
+  rename(ID = parent)
+  
+childs <- FB_all_combos %>% 
+  filter(timescale == "30mins") %>% 
+  rename(parent = down, child = up) %>% 
+  group_by(child) %>% 
+  summarise(mean_child = mean(prop)) %>% 
+  rename(ID = child)
+
+left_join(parents, childs, by = "ID") %>% 
+  ggplot(aes(x = mean_parent, y = mean_child))+
+  geom_point()
 ```
 
 ## Find a path through the full graph using the TSP
@@ -1609,8 +1927,8 @@ new_seq <-
   group_by(parent) %>% 
   summarise(mean = mean(prop),
             sd = sd(prop)) %>% 
-  arrange(desc(mean)) %>% View()
-  mutate(sequence = seq(1, length(con_big), 1)) %>% 
+  arrange(desc(mean)) %>% #View()
+  mutate(sequence = seq(1, length(25), 1)) %>% 
   rename(ID = parent) %>% 
   mutate(ID = as.numeric(substr(ID, 3, 4))) %>% 
   select(ID, sequence)
@@ -1985,7 +2303,7 @@ concon2_w3 <- tibble(node_ID = con_big_w3, sequence = seq(1, length(con_big_w3),
   select(ID, sequence)
   
 #con_model <- calc_model_result(concon$ID, "W3") %>% rename("con" = pred_out)
-produce_metrics(concon2, "W3", "concorde")
+#produce_metrics(concon2, "W3", "concorde")
 
 opt_routes_w3 <- 
   concon2 %>% 
@@ -3011,7 +3329,7 @@ zz_twi_sequence <- zz_twi %>%
 # Defining New Sequence- average prop value as parent node
 Calculate new sequence for figure 5:
 ```{r combine}
-#new_seq_w3 <- 
+new_seq_w3 <- 
   W3_all_combos %>% 
   filter(timescale == "30mins") %>% 
   ungroup() %>% 
@@ -3386,12 +3704,18 @@ Run on W3
 
 
 #running model
-cheap_model_w3 <- calc_model_result(W3_cheap$ID, "W3") %>% rename("cheapest" = pred_out)
-pk_model_w3 <- calc_model_result(W3_pk_seq$ID, "W3") %>% rename("pk" = pred_out)
-random_model_w3 <- calc_model_result(W3_random$ID, "W3") %>% rename("random" = pred_out)
-twi_model_w3 <- calc_model_result(w3_twi_sequence$ID, "W3") %>% rename("twi" = pred_out)
-new_model_w3 <- calc_model_result(new_seq_w3$down, "W3") %>% rename("new" = pred_out)
-con_model_w3 <- calc_model_result(opt_routes_w3$down, "W3") %>% rename("concorde" = pred_out)
+cheap_model_w3 <- calc_model_result(W3_cheap$ID, "W3") %>%   
+  rename("cheapest" = pred_out)
+pk_model_w3 <- calc_model_result(W3_pk_seq$ID, "W3") %>% 
+  rename("pk" = pred_out)
+random_model_w3 <- calc_model_result(W3_random$down, "W3") %>% 
+  rename("random" = pred_out)
+twi_model_w3 <- calc_model_result(w3_twi_sequence$ID, "W3") %>% 
+  rename("twi" = pred_out)
+new_model_w3 <- calc_model_result(new_seq_w3$down, "W3") %>% 
+  rename("new" = pred_out)
+con_model_w3 <- calc_model_result(opt_routes_w3$down, "W3") %>% 
+  rename("concorde" = pred_out)
 
 
 comparison_w3 <- input_w3 %>% 
@@ -3690,7 +4014,68 @@ test2 %>%
 
 ```
 
+Combine histogram of accuracy, colored by best model, with discharge plotted as a line overtop
+Gave up on this plot, although it has potential
+```{r}
+test2 <- 
+df_acc %>%
+  left_join(rbind(q_23_bind, q_24_bind), by = "datetime")
+
+sec2 <- with(test2, train_sec(accuracy, Q_mm_day))
+
+#Plot with both accuracy and discharge, very cooL!
+test2 %>% 
+  ggplot(aes(x = datetime)) +
+  geom_col(aes(y = accuracy, fill = unique_sol), width = 1800, position = "identity") +
+    geom_line(aes(y = sec2$fwd(Q_mm_day)), color = "black", lwd = 1.5)+
+  scale_y_continuous(sec.axis = sec_axis(~sec2$rev(.), name = "Instantaneous Q (mm/day)")
+                     ) +
+  theme_classic() +
+  labs(y = "Accuracy", x = NULL) +
+  scale_fill_manual(values = c(five_colors[1:3], "lightgrey")) +
+  scale_color_manual(values = c(five_colors[1:3], "lightgrey")) +
+  scale_x_break(c(ymd_hms("2023-11-1200:00:00"),
+                  ymd_hms("2024-05-20 00:00:00"))) +
+  scale_x_datetime(
+    date_labels = "%b %Y",
+    date_breaks = "1 month",
+    timezone = "UTC"
+  ) +
+  theme(
+    axis.text.x.top = element_blank(),
+    axis.ticks.x = element_blank(),
+    axis.line.x.top = element_blank()#,
+    #legend.position = "none"   # legend will come from bottom plot
+  )
+```
+
 Third plot idea- color discharge by the proportion of network that is flowing
+
+```{r}
+number_activated <- 
+  input_w3 %>% 
+  left_join(W3_cheap, by = "ID") %>%
+  group_by(datetime) %>% 
+  select(-c(wshed, mins)) %>% 
+  mutate(deployed = length(binary)) %>% 
+  #arrange(sequence) %>% 
+      #filter(binary == 1) %>% 
+    summarise(number_flowing = length(binary[binary == 1]),
+            deployed = list(unique(ID)))
+
+
+test2 %>% 
+  left_join(number_activated, by = "datetime") %>% 
+  ggplot(aes(x = day_of_year)) +
+  geom_bar(aes(fill = value, y = prop), na.rm = TRUE, position="fill", stat="identity", width = 1)+
+  scale_fill_manual(values = c("grey", "black", "black"))+
+  geom_line(aes(y = sec2$fwd(Q_mm_day), color = number_flowing))+
+  scale_color_viridis()+
+  ylab("Accuracy")+
+  scale_y_continuous(sec.axis = sec_axis(~sec2$rev(.), name = "Instantaneous Q (mm/day)")) +
+  facet_grid(name~year)
+```
+
 
 ```{r FB}
 #chains used in graph theory solutions
@@ -5837,8 +6222,8 @@ five_colors <- c("#d68c45",  "#247BA0", "#A30B37", "#F0C808", "#2c6e49")
 
 
 #plot the best at each timestep
-p_load(ggbreak)
-df_long_w3 %>% 
+#p_load(ggbreak)
+df <- df_long_w3 %>% 
   filter(model != "random_accuracy",
          model != "cheap_accuracy",
          model != "con_accuracy") %>% 
@@ -5847,18 +6232,109 @@ df_long_w3 %>%
   mutate(dup = as.character(n() > 1)) %>% ungroup()  %>%
   mutate(unique_sol = case_when(dup == TRUE ~ "z_tie",
                                 dup == FALSE ~ model)) %>%
+inner_join(big_comb, by = "datetime") #%>%
+
+df_acc <- df %>%
+  dplyr::group_by(datetime) %>%
+  dplyr::summarise(
+    accuracy = unique(accuracy),
+    unique_sol = unique(unique_sol),
+    .groups = "drop"
+  )
+
+
+ggplot(df, aes(x = datetime, y = Q_mm_day, color = unique_sol)) +
+  geom_point(size = 1) +
+  theme_classic() +
+  scale_fill_manual(values = c(five_colors[1:3], "lightgrey")) +
+  scale_color_manual(values = c(five_colors[1:3], "lightgrey")) +
+  labs(
+    #title = "Most accurate model along hydrograph",
+    y = "Discharge (mm/day)",
+    x = ""
+  ) +
+  scale_x_break(c(ymd_hms("2023-11-12 00:00:00"),
+                  ymd_hms("2024-05-20 00:00:00"))) +
+  scale_x_datetime(
+    date_labels = "%b %Y",   # or "%b %Y" for shorter labels
+    date_breaks = "1 month",    # adjust to taste
+    timezone = "UTC"
+  )+ theme(#legend.position = "bottom",
+           axis.ticks.x.top = element_blank(),
+        axis.text.x.top  = element_blank(),
+        axis.line.x.top = element_blank())
+
+
+
+
+p2 <- ggplot(df_acc, aes(x = datetime, y = accuracy, fill = unique_sol)) +
+  geom_col(width = 1800, position = "identity") +
+  theme_classic() +
+  labs(y = "Accuracy", x = NULL) +
+  scale_fill_manual(values = c(five_colors[1:3], "lightgrey")) +
+  scale_color_manual(values = c(five_colors[1:3], "lightgrey")) +
+  scale_x_break(c(ymd_hms("2023-11-1200:00:00"),
+                  ymd_hms("2024-05-20 00:00:00"))) +
+  scale_x_datetime(
+    date_labels = "%b %Y",
+    date_breaks = "1 month",
+    timezone = "UTC"
+  ) +
+  theme(
+    axis.text.x = element_blank(),
+    axis.ticks.x = element_blank(),
+    axis.line.x.top = element_blank()#,
+    #legend.position = "none"   # legend will come from bottom plot
+  )
+
+      
+
+# stack top (accuracy bars) and bottom (hydrograph)
+(free(p2, type = "label") / p1) + plot_layout(heights = c(1, 3) , guides = "collect")
+
+(p2 / p1) +
+  plot_layout(heights = c(1, 3), guides = "collect") &
+  theme(legend.position = "right")
+
+######
+####### Plot that has a venn diagram of colors to show which ties are which;
+#almost all of the time the ties are between pk and new, almost no ties are with TWI
+df_long_w3 %>% 
+  filter(model != "random_accuracy",
+         model != "cheap_accuracy",
+         model != "con_accuracy") %>% 
+  group_by(datetime) %>% 
+  filter(accuracy == max(accuracy)) %>% 
+  summarise(
+    accuracy = unique(accuracy),  # should be only one per datetime
+    models = paste(sort(unique(model)), collapse = ", "),
+    n_models = n()
+  ) %>%
+  ungroup() %>% 
+  mutate(color = case_when(models == "new_accuracy" ~ "red",
+                           models == "pk_accuracy" ~ "blue",
+                           models == "twi_accuracy" ~ "yellow",
+                           models == "new_accuracy, pk_accuracy" ~ "purple",
+                           models == "new_accuracy, twi_accuracy" ~ "orange",
+                           models == "pk_accuracy, twi_accuracy" ~ "green",
+                           models == "new_accuracy, pk_accuracy, twi_accuracy" ~ "black"))%>%
 inner_join(big_comb, by = "datetime") %>%
-  ggplot(aes(x = datetime, y = Q_mm_day, color = unique_sol)) +
+  ggplot(aes(x = datetime, y = Q_mm_day, color = color)) +
   #geom_point() +
   geom_point(size = 1)+
   theme_classic()+
-  scale_color_manual(values = c(five_colors[1:3], "lightgrey"))+
+scale_color_identity()+
   labs(title = "Most accurate model along hydrograph", y = "Discharge (mm/day)", x = "")+
  # facet_wrap(~ unique_sol)+
     scale_x_break(c(ymd_hms("2023-11-12 00:00:00"), ymd_hms("2024-05-20 00:00:00")))
-  
 
 ```
+
+FB
+```{r}
+all_fb_Q
+```
+
 
 ## Figure 8: Maps of where sequences work in space
 Set of map panels where symbol color = flowing state, outline color or shape indicating correctly predicted or not
